<resources>
    <string name="app_name">adminForge</string>
    <string name="title_settings">Settings</string>
    <string name="title_news">News</string>
    <string name="title_status">Status</string>
    <string name="title_donate">Donate</string>
    
    <string name="hint_search">Search</string>
    <string name="no_updates_found">You are already up to date.</string>
    <string name="update_check_failed">Error checking for updates</string>
    <string name="checking_for_updates">Checking for updates...</string>
    <string name="install">Install</string>
    <string name="later">Later</string>
    <string name="new_update_available">New update available (%s)</string>
    <string name="update_message">A new version of the adminForge app has been found. Would you like to install it now?</string>
    <string name="downloading_update">Downloading update...</string>
    <string name="download_failed">Download failed: %s</string>
    <string name="install_failed">Installation failed: %s</string>
    
    <string name="section_notifications">Notifications</string>
    <string name="enable_notifications">Enable</string>
    <string name="notifications_summary">Receive News &amp; Status Updates</string>
    <string name="favorites_only_notifications">Only Favorites</string>
    <string name="favorites_only_notifications_summary">Only notify (and badge) on outages of pinned services</string>
    <string name="btn_test_notification">Send Test Notification</string>
    <string name="test_notification_title">Test Notification</string>
    <string name="test_notification_body">This is a test from adminForge. If you see this, notifications are working!</string>
    <string name="test_sent">Test sent</string>
    <string name="permission_required">Permission for notifications required</string>
    
    <string name="section_unified_push">UnifiedPush (Real-time)</string>
    <string name="distributor_none">Distributor: Not selected</string>
    <string name="distributor_format">Distributor: %s</string>
    <string name="btn_pick_distributor">Select Distributor</string>
    <string name="title_distributor_picker">Select Distributor</string>
    <string name="cancel">Cancel</string>
    <string name="more_info">More Info</string>
    <string name="selected_format">Selected: %s</string>
    
    <string name="section_battery">Background Reliability</string>
    <string name="battery_status_active">Battery Optimization: Active (Limited)</string>
    <string name="battery_status_exempt">Battery Optimization: Exempted</string>
    <string name="btn_allow_background">Allow for Background</string>
    <string name="battery_summary">This prevents Android from killing the app in the background.</string>
    <string name="background_notice">Note: If UnifiedPush is unavailable, the app checks for updates every 10-15 min in the background.</string>
    
    <string name="section_language">Language</string>
    <string name="current_language">Current Language</string>
    <string name="lang_de">German</string>
    <string name="lang_en">English</string>
    
    <string name="category_favorites">Your Favorites</string>
    
    <string name="donate_title">Support adminForge</string>
    <string name="donate_desc">We intentionally avoid advertising and tracking. To maintain our independence, we rely on your help.</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="bank_holder">Account Holder</string>
    <string name="bank_iban">IBAN</string>
    <string name="bank_bic">BIC</string>
    <string name="bank_name">Bank</string>
    <string name="copy_toast">Copied to clipboard</string>
    <string name="no_app_found">No app found to handle this link</string>
    <string name="unread_format">%d unread articles</string>
    <string name="status_offline_filter">Only offline services</string>
    <string name="error_loading">Error loading</string>
    <string name="news_unread_one">1 new article</string>
    <string name="news_unread_plural">%d new articles</string>
    <string name="status_partial_outage">Partial service outage</string>
    <string name="status_all_ok">All systems operational</string>
    <string name="status_incident">Incident</string>
    <string name="no_services_found">No services found</string>

    <string name="menu_open_browser">Open in browser</string>
    <string name="menu_website">Visit website</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_git">Source code (Git)</string>
    <string name="menu_update_check">Check for updates</string>

    <string name="nav_home">Home</string>
    <string name="nav_news">News</string>
    <string name="nav_status">Status</string>
    <string name="nav_donate">Donate</string>
    <string name="lang_system">System language</string>
</resources>
