<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_open_browser"
        android:icon="@drawable/ic_open_browser"
        android:title="@string/menu_open_browser"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert"
        android:title="Settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings_page"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/action_website"
                android:title="@string/menu_website" />
            <item
                android:id="@+id/action_forum"
                android:title="@string/menu_forum" />
            <item
                android:id="@+id/action_contact"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/action_git"
                android:title="@string/menu_git" />
            <item
                android:id="@+id/action_update"
                android:title="@string/menu_update_check" />
            <item
                android:id="@+id/action_version"
                android:title="v1.0.134"
                android:enabled="false" />
        </menu>
    </item>
</menu>
